package com.mhm.action.iterator;

/**
 * @author MHm
 * @date 2020-4-20 13:53
 */
public interface Iterator {
    Object first();

    Object next();

    boolean hasNext();
}
